--- a/homepage.html
+++ b/homepage.html
@@ -189,25 +189,25 @@
                 <div class="modal-buttons-container">
                     <button id="btn1-class2" class="modal-button">
                         <img src="static/images/kai.jpeg" alt="Preview of the image">
-                        <div class="like-button">Connect</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Kim Jongin</strong><br>
                             Senior 2025<br>
                             <em>Skill:</em> Coding<br>
                             <em>About Me:</em> Dancing is my passion.
                         </span>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </button>
                     <button id="btn2-class2" class="modal-button">
                         <img src="static/images/kyungsoo.png" alt="Preview of the image">
-                        <div class="like-button">Connect</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
                             <em>Skill:</em> Coding<br>
                             <em>About Me:</em> RnB only
                         </span>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
                     </button>
                 </div>
                 <div id="no-results-class2" class="no-results">
@@ -261,25 +261,25 @@
                 <div class="modal-buttons-container">
                     <button id="btn1-class3" class="modal-button">
                         <img src="static/images/baekhyun.jpg" alt="Preview of the image">
-                        <div class="like-button">Connect</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Byun Baekhyun</strong><br>
                             Senior 2025<br>
                             <em>Skill:</em> Coding<br>
                             <em>About Me:</em> I have a corgi. I love him.
                         </span>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </button>
                     <button id="btn2-class3" class="modal-button">
                         <img src="static/images/kyungsoo.png" alt="Preview of the image">
-                        <div class="like-button">Connect</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Doh Kyungsoo</strong><br>
                             Junior 2025<br>
                             <em>Skill:</em> Coding<br>
                             <em>About Me:</em> RnB only
                         </span>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
                     </button>
                 </div>
                 <div id="no-results-class3" class="no-results">
@@ -333,25 +333,25 @@
                 <div class="modal-buttons-container">
                     <button id="btn1-class4" class="modal-button">
                         <img src="static/images/no-profile.png" alt="Preview of the image">
-                        <div class="like-button">Connect</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Person Four</strong><br>
                             Senior 2025<br>
                             <em>Skill:</em> Coding<br>
                             <em>About Me:</em> Loves coding.
                         </span>
-                        <div class="group-status-free">Need Partner</div>
+                        <div class="status-badge free">Need Partner</div>
                     </button>
                     <button id="btn2-class4" class="modal-button">
                         <img src="static/images/no-profile.png" alt="Preview of the image">
-                        <div class="like-button">Connect</div>
+                        <div class="connect-button">Connect</div>
                         <span class="button-text">
                             <strong>Person Five</strong><br>
                             Junior 2025<br>
                             <em>Skill:</em> Coding<br>
                             <em>About Me:</em> Enjoys hiking.
                         </span>
-                        <div class="group-status-taken">Has Partner</div>
+                        <div class="status-badge taken">Has Partner</div>
                     </button>
                 </div>
                 <div id="no-results-class4" class="no-results">
