bug fix to error message

--- a/homepage.html
+++ b/homepage.html
@@ -127,7 +127,7 @@
                     </div>
                     <div id="no-results-class1" class="no-results">
                         <img src="static/images/no-result.png" alt="No results found">
-                        <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
+                        <p>Sorry! It seems like no students can be found with that match. Reach out to us <a href="mailto:support@example.com" style="color: inherit; text-decoration: underline;">here</a> and we'll get to finding your perfect study buddies.</p>
                     </div>
                     <div id="modal1-class1" class="modal">
                         <div class="modal-content">
@@ -212,7 +212,7 @@
                     </div>
                     <div id="no-results-class2" class="no-results">
                         <img src="static/images/no-result.png" alt="No results found">
-                        <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
+                        <p>Sorry! It seems like no students can be found with that match. Reach out to us <a href="mailto:support@example.com" style="color: inherit; text-decoration: underline;">here</a> and we'll get to finding your perfect study buddies.</p>
                     </div>
                     <div id="modal1-class2" class="modal">
                         <div class="modal-content">
@@ -284,7 +284,7 @@
                     </div>
                     <div id="no-results-class3" class="no-results">
                         <img src="static/images/no-result.png" alt="No results found">
-                        <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
+                        <p>Sorry! It seems like no students can be found with that match. Reach out to us <a href="mailto:support@example.com" style="color: inherit; text-decoration: underline;">here</a> and we'll get to finding your perfect study buddies.</p>
                     </div>
                     <div id="modal1-class3" class="modal">
                         <div class="modal-content">
@@ -356,7 +356,7 @@
                     </div>
                     <div id="no-results-class4" class="no-results">
                         <img src="static/images/no-result.png" alt="No results found">
-                        <p>Sorry! It seems like no students can be found with that match. Reach out to us here and we'll get to finding your perfect study buddies.</p>
+                        <p>Sorry! It seems like no students can be found with that match. Reach out to us <a href="mailto:support@example.com" style="color: inherit; text-decoration: underline;">here</a> and we'll get to finding your perfect study buddies.</p>
                     </div>
                     <div id="modal1-class4" class="modal">
                         <div class="modal-content">
