--- a/homepage.html
+++ b/homepage.html
@@ -247,7 +247,17 @@
                     <div id="modal1-class2" class="modal">
                         <div class="modal-content">
                             <img src="static/images/kai.jpeg" alt="Description of the image" class="modal-image">
-                            <div class="connect-button">Connect</div>
+                            <div class="icon-buttons">
+                                <button class="icon-button" onclick="addFriend()">
+                                    <img src="static/images/add-friend.png" alt="Add Friend Icon" class="icon">
+                                </button>
+                                <button class="icon-button" onclick="openMail('student@example.com')">
+                                    <img src="static/images/mail.png" alt="Email Icon" class="icon">
+                                </button>
+                                <button class="icon-button flag-icon" onclick="openReportModal()">
+                                    <img src="static/images/report.png" alt="Flag Icon" class="icon">
+                                </button>
+                            </div>
                             <div class="modal-text">
                                 <strong>Kim Jongin</strong><br>
                                 Senior 2025<br>
@@ -260,7 +270,17 @@
                     <div id="modal2-class2" class="modal">
                         <div class="modal-content">
                             <img src="static/images/kyungsoo.png" alt="Description of the image" class="modal-image">
-                            <div class="connect-button">Connect</div>
+                            <div class="icon-buttons">
+                                <button class="icon-button" onclick="addFriend()">
+                                    <img src="static/images/add-friend.png" alt="Add Friend Icon" class="icon">
+                                </button>
+                                <button class="icon-button" onclick="openMail('student@example.com')">
+                                    <img src="static/images/mail.png" alt="Email Icon" class="icon">
+                                </button>
+                                <button class="icon-button flag-icon" onclick="openReportModal()">
+                                    <img src="static/images/report.png" alt="Flag Icon" class="icon">
+                                </button>
+                            </div>
                             <div class="modal-text">
                                 <strong>Doh Kyungsoo</strong><br>
                                 Junior 2025<br>
@@ -319,7 +339,17 @@
                     <div id="modal1-class3" class="modal">
                         <div class="modal-content">
                             <img src="static/images/baekhyun.jpg" alt="Description of the image" class="modal-image">
-                            <div class="connect-button">Connect</div>
+                            <div class="icon-buttons">
+                                <button class="icon-button" onclick="addFriend()">
+                                    <img src="static/images/add-friend.png" alt="Add Friend Icon" class="icon">
+                                </button>
+                                <button class="icon-button" onclick="openMail('student@example.com')">
+                                    <img src="static/images/mail.png" alt="Email Icon" class="icon">
+                                </button>
+                                <button class="icon-button flag-icon" onclick="openReportModal()">
+                                    <img src="static/images/report.png" alt="Flag Icon" class="icon">
+                                </button>
+                            </div>
                             <div class="modal-text">
                                 <strong>Byun Baekhyun</strong><br>
                                 Senior 2025<br>
@@ -332,7 +362,17 @@
                     <div id="modal2-class3" class="modal">
                         <div class="modal-content">
                             <img src="static/images/kyungsoo.png" alt="Description of the image" class="modal-image">
-                            <div class="connect-button">Connect</div>
+                            <div class="icon-buttons">
+                                <button class="icon-button" onclick="addFriend()">
+                                    <img src="static/images/add-friend.png" alt="Add Friend Icon" class="icon">
+                                </button>
+                                <button class="icon-button" onclick="openMail('student@example.com')">
+                                    <img src="static/images/mail.png" alt="Email Icon" class="icon">
+                                </button>
+                                <button class="icon-button flag-icon" onclick="openReportModal()">
+                                    <img src="static/images/report.png" alt="Flag Icon" class="icon">
+                                </button>
+                            </div>
                             <div class="modal-text">
                                 <strong>Doh Kyungsoo</strong><br>
                                 Junior 2025<br>
@@ -391,7 +431,17 @@
                     <div id="modal1-class4" class="modal">
                         <div class="modal-content">
                             <img src="static/images/no-profile.png" alt="Description of the image" class="modal-image">
-                            <div class="connect-button">Connect</div>
+                            <div class="icon-buttons">
+                                <button class="icon-button" onclick="addFriend()">
+                                    <img src="static/images/add-friend.png" alt="Add Friend Icon" class="icon">
+                                </button>
+                                <button class="icon-button" onclick="openMail('student@example.com')">
+                                    <img src="static/images/mail.png" alt="Email Icon" class="icon">
+                                </button>
+                                <button class="icon-button flag-icon" onclick="openReportModal()">
+                                    <img src="static/images/report.png" alt="Flag Icon" class="icon">
+                                </button>
+                            </div>
                             <div class="modal-text">
                                 <strong>Person Four</strong><br>
                                 Senior 2025<br>
@@ -404,7 +454,17 @@
                     <div id="modal2-class4" class="modal">
                         <div class="modal-content">
                             <img src="static/images/no-profile.png" alt="Description of the image" class="modal-image">
-                            <div class="connect-button">Connect</div>
+                            <div class="icon-buttons">
+                                <button class="icon-button" onclick="addFriend()">
+                                    <img src="static/images/add-friend.png" alt="Add Friend Icon" class="icon">
+                                </button>
+                                <button class="icon-button" onclick="openMail('student@example.com')">
+                                    <img src="static/images/mail.png" alt="Email Icon" class="icon">
+                                </button>
+                                <button class="icon-button flag-icon" onclick="openReportModal()">
+                                    <img src="static/images/report.png" alt="Flag Icon" class="icon">
+                                </button>
+                            </div>
                             <div class="modal-text">
                                 <strong>Person Five</strong><br>
                                 Junior 2025<br>
@@ -438,7 +498,7 @@
     <div id="friendPopup" class="popup" style="display:none;">
         <p>Added as a friend!</p>
     </div>
-    
+
     <!-- Report Modal -->
     <div id="reportModal" class="modal" style="display:none;">
         <div class="modal-content">
