--- a/signup.html
+++ b/signup.html
@@ -24,10 +24,11 @@
             <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="logo-login">
             <h1>Sign Up</h1>
             <form action="submit_signup.php" method="POST">
-                <input type="name" id="name" name="name" placeholder="Enter your name" required>
+                <input type="first_name" id="first_name" name="name" placeholder="Enter your first name" required>
+                <input type="last_name" id="last_name" name="name" placeholder="Enter your last name" required>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                <button type="submit" class="login-btn">Login</button>
+                <button type="submit" class="login-btn">Sign Up</button>
                 <p>Already a member? <a href="login.html">Login now</a></p>
             </form>
         </div>
