--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="index.css">
     <!-- Google Font Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.43.4/dist/umd/supabase.min.js"></script>
 </head>
 <body>
     <nav>
@@ -57,7 +56,7 @@
         </div>
     </section>
 
-    <script src="index.js"></script>
+    <script type="module" src="modules/index.js"></script>
 
 </body>
 </html>
