--- a/login.html
+++ b/login.html
@@ -30,6 +30,6 @@
             </form>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="modules/index.js"></script>
 </body>
 </html>
