--- a/signup.html
+++ b/signup.html
@@ -33,6 +33,6 @@
             </form>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="modules/index.js"></script>
 </body>
 </html>
