Added log in functionality

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <div class="login-form">
             <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="logo-login">
             <h1>Login</h1>
-            <form action="submit_login.php" method="POST">
+            <form id="user-login" action="submit_login.php" method="POST">
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 <button type="submit" class="login-btn">Login</button>
