--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
         <div class="login-form">
             <img src="static/images/studdies_logo.png" alt="Studdies Logo" class="logo-login">
             <h1>Sign Up</h1>
-            <form action="submit_signup.php" method="POST">
+            <form id="user-signup" action="submit_signup.php" method="POST">
                 <input type="first_name" id="first_name" name="name" placeholder="Enter your first name" required>
                 <input type="last_name" id="last_name" name="name" placeholder="Enter your last name" required>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
